--- a/src/App.css
+++ b/src/App.css
@@ -91,20 +91,7 @@ button:hover {
 }
 
 /* Countdown */
-.countdown {
-  min-width: 580px;
-  min-height: 304px;
-  color: black;
-  margin: 0 auto;
-  padding: 25px 50px;
-  border-radius: 5px;
-  position: relative;
-  z-index: 2;
-  display: flex-box;
-  justify-content: center;
-  align-items: center;
-  background-color: rgb(255, 255, 255, 0.85);
-}
+
 ul {
   margin-left: -45px;
 }
@@ -127,6 +114,32 @@ li span {
 .complete {
   position: relative;
   top: 60px;
+}
+
+.complete-title {
+  animation: complete 4s infinite;
+}
+
+@keyframes complete {
+  0% {
+    color: red;
+  }
+
+  25% {
+    color: yellow;
+  }
+
+  50% {
+    color: green;
+    transform: scale(1.5);
+  }
+
+  70% {
+    color: blue;
+  }
+  100% {
+    color: purple;
+  }
 }
 
 /* Media Query: Large Smartphone (Vertical) */
